--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@ title: Home
   </h1>
 
   <p>
-    Some Cool Company</br>
-    Brazil, Barueri-SP</br>
-    Front-end Developer
+    Wuhan University</br>
+    China,</br>
+    Master
   </p>
 
   <nav>
     <ul>
-      <li><a href="https://twitter.com/{{ site.twitter }}">Twitter</a></li>
+     
       <li><a href="https://github.com/{{ site.github }}">Github</a></li>
-      <li><a href="mailto:{{ site.email }}">me AT jane DOT doe</a></li>
+      <li><a href="mailto:{{ site.email }}">2011huang@whu.edu.cn</a></li>
     </ul>
   </nav>
 
@@ -31,21 +31,26 @@ title: Home
 
 <section class="content">
   <p>
-    Student at School of Code, creator of <a href="http://aweso.me/">Awesome</a>. Front-end Developer looking for responsive challenges. Programmer at <a href="https://google.com/search?q=cool+company">Cool Company</a>.
-  </p>
+	<table id="table" class="STYLE116">
 
-  <p>
-    Member of the <a href="https://google.com/search?q=big+bang+theory+show">The Big Band Theory</a>, playing drums with love. Recording a new disco inside my garage. Willing to be the new Slayer girl drummer. <a href="https://google.com/search?q=black+metal">Black Metal lover</a>.
-  </p>
-
-  <p>
-    <strong>Study Interests</strong></br>
-    Javascript without <a href="http://vanilla-js.com/">jQuery</a>. Lorem Ipsum generators. Bands that don't exist yet.
-  </p>
+	<tr>   
+	<td >2015-</td>
+	<td>M.S.</td>
+	<td> Communication and Information System</td>
+	<td> Wuhan University (China) </td>
+	</tr>
+	<tr>   
+	<td >2011-2015</td>
+	<td> B.S.</td>
+	<td> Software Engineering</td>
+	<td> Wuhan University (China)  </td>
+	</tr>
+	</table>
+	</p>
 
   <p>
     <strong>Projects</strong></br>
-    <a href="http://aweso.me/">Awesome Project</a>. Just some jQuery lib.
+    <a href="https://github.com/hubery94/CDN_HUAWEI">2017 HUAWEI CODE CRAFT </a>. Just some jQuery lib.
     <br>My band, on weekends. <a href="https://google.com/search?q=my+band">The Big Band Theory</a>
   </p>
 </section>
