--- a/index.html
+++ b/index.html
@@ -1,56 +1,62 @@
 ---
 layout: default
-title: Home
+title: Blog
 ---
-<header>
-  <img alt="{{ site.name }} picture" src="{{ site.picture }}" />
+<div class="well">
+    <div class="list-group">
+      {% for post in paginator.posts %}
+      <div class="list-group-item">
+        <div class="row-action-primary">
+          <i class="fa fa-sticky-note"></i>
+        </div>
+        <div class="row-content">
+          <div class="least-content">{{ post.date | date_to_string }}</div>
+          <h4 class="list-group-item-heading"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
 
-  <h1>
-    <strong><a href="./">{{ site.name }}</a></strong>
-  </h1>
+          <p class="list-group-item-text">{{ post.content | strip_html | truncatewords: 20 }}</p>
+        </div>
+      </div>
+      <div class="list-group-separator"></div>
+      {% endfor %}
+    </div>
+   
 
-  <p>
-    Wuhan University</br>
-    China,</br>
-    Master
-  </p>
+    <!-- Pagination links -->
+    {% if paginator.total_pages > 1 %}
+    <ul class="pager">
+      {% if paginator.previous_page %}
+        <li class="previous">
+          <a href="{{ paginator.previous_page_path | prepend: site.baseurl | replace: '//', '/' }}">&laquo;</a>
+        </li>
+      {% else %}
+        <li class="previous disabled"><span aria-hidden="true">&laquo;</span></li>
+      {% endif %}
 
-  <nav>
-    <ul>
-     
-      <li><a href="https://github.com/{{ site.github }}">Github</a></li>
-      <li><a href="mailto:{{ site.email }}">2011huang@whu.edu.cn</a></li>
+      <li><a href="/">First</a></li>
+
+      {% for page in (1..paginator.total_pages) %}
+        {% if page == paginator.page %}
+          <li class="active">
+             <a>{{ page }}<span class="sr-only">(current)</span></a>
+          </li>
+        {% elsif page == 1 %}
+          <li><a href="/">{{ page }}</a></li>
+        {% else %}
+          <li>
+            <a href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+          </li>
+        {% endif %}
+      {% endfor %}
+
+      <li><a href="/page{{ paginator.total_pages }}/">Last</a></li>
+
+      {% if paginator.next_page %}
+        <li class="next">
+          <a href="{{ paginator.next_page_path | prepend: site.baseurl | replace: '//', '/' }}">&raquo;</a>
+        </li>
+      {% else %}
+        <li class="next disabled"><span>&raquo;</span></li>
+      {% endif %}
     </ul>
-  </nav>
-
-  <small>
-    <a href="https://github.com/sergiokopplin/violet">Violet</a> theme
-    <br> inspired on <a href="http://cyberglot.me/">Ju Gonçalves</a>
-  </small>
-</header>
-
-<section class="content">
-  <p>
-	<table id="table" class="STYLE116">
-
-	<tr>   
-	<td >2015-</td>
-	<td>M.S.</td>
-	<td> Communication and Information System</td>
-	<td> Wuhan University (China) </td>
-	</tr>
-	<tr>   
-	<td >2011-2015</td>
-	<td> B.S.</td>
-	<td> Software Engineering</td>
-	<td> Wuhan University (China)  </td>
-	</tr>
-	</table>
-	</p>
-
-  <p>
-    <strong>Projects</strong></br>
-    <a href="https://github.com/hubery94/CDN_HUAWEI">2017 HUAWEI CODE CRAFT </a>. Just some jQuery lib.
-    <br>My band, on weekends. <a href="https://google.com/search?q=my+band">The Big Band Theory</a>
-  </p>
-</section>
+    {% endif %}
+</div><!-- end #home -->
