--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: post
 title: Personal Page
 ---
 <div class="well">
@@ -61,6 +61,3 @@ title: Personal Page
     {% endif %}
 </div><!-- end #home -->
 
-<p>
-Test
-</p>
