--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@ title: Personal Page
       </div>
       <div class="list-group-separator"></div>
       {% endfor %}
+	  
+	  <p>
+    Some Cool Company</br>
+    Brazil, Barueri-SP</br>
+    Front-end Developer
+  </p>
     </div>
    
 
