--- a/index.html
+++ b/index.html
@@ -4,27 +4,10 @@ title: Personal Page
 ---
 <div class="well">
     <div class="list-group">
-      {% for post in paginator.posts %}
-      <div class="list-group-item">
-        <div class="row-action-primary">
-          <i class="fa fa-sticky-note"></i>
-        </div>
-        <div class="row-content">
-          <div class="least-content">{{ post.date | date_to_string }}</div>
-          <h4 class="list-group-item-heading"><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h4>
-
-          <p class="list-group-item-text">{{ post.content | strip_html | truncatewords: 20 }}</p>
-        </div>
-      </div>
-      <div class="list-group-separator"></div>
-      {% endfor %}
+      test
     </div>
    
-     <p>
-    Some Cool Company</br>
-    Brazil, Barueri-SP</br>
-    Front-end Developer
-  </p>
+    
 
     <!-- Pagination links -->
     {% if paginator.total_pages > 1 %}
@@ -66,3 +49,10 @@ title: Personal Page
     {% endif %}
 </div><!-- end #home -->
 
+<div>
+ <p>
+    Some Cool Company</br>
+    Brazil, Barueri-SP</br>
+    Front-end Developer
+  </p>
+</div>
